# dynasched

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  Makefile.am  Makefile.dsched-rules  README.md  VERSION  autogen.pl  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  release-checklist.md
.github/workflows/: builds.yaml
config/: Makefile.am  distscript.sh  dsched_check_attributes.m4  dsched_check_cflags.m4  dsched_check_compiler_version.m4  dsched_check_compiler_works.m4  dsched_check_ident.m4  dsched_check_offsetof.m4  dsched_check_pthread_pids.m4  dsched_check_ptrace.m4  dsched_check_version.m4  dsched_check_visibility.m4  dsched_config_asm.m4  dsched_config_pthreads.m4  dsched_config_subdir.m4  dsched_config_subdir_args.m4  dsched_config_threads.m4  dsched_configure_options.m4  dsched_ensure_contains_optflags.m4  dsched_find_type.m4  dsched_functions.m4  dsched_get_version.m4  dsched_get_version.sh  dsched_load_platform.m4  dsched_mca.m4  dsched_mca_priority_sort.pl  dsched_save_version.m4  dsched_search_libs.m4  dsched_setup_cc.m4  dsched_setup_cli.m4  dsched_setup_hwloc.m4  dsched_setup_libevent.m4  dsched_setup_pmix.m4  dsched_strip_optflags.m4  dsched_summary.m4  dsched_try_assemble.m4
contrib/: Makefile.am  buildrpm.sh  construct_constants.py  dsched-valgrind.supp  dsched.spec  fix_indent.pl  generate_file_list.pl  make-authors.pl  make_dist_tarball  search_compare.pl  search_replace.pl  update-my-copyright.pl  whitespace-purge.sh
docs/: Makefile.am  conf.py  contributing.rst  getting-help.rst  index.rst  mca.rst  quickstart.rst
docs/developers/: git-github.rst  gnu-autotools.rst  prerequisites.rst  rst-for-markdown-expats.rst  sphinx.rst
docs/installing-dsched/: compilers-and-flags.rst  definitions.rst  filesystem-requirements.rst  index.rst  installation-location.rst  packagers.rst  required-support-libraries.rst  vpath-builds.rst
docs/installing-dsched/configure-cli-options/: conventions.rst  index.rst  installation.rst  required-support-libraries.rst
docs/man/: index.rst
docs/man/man1/: dsched_info.1.rst  index.rst
docs/man/man7/: dynasched.7.rst  index.rst
include/: Makefile.am  dsched_version.h.in
src/: Makefile.am
src/etc/: Makefile.am  dsched-default-hostfile  dsched-mca-params.conf
src/event/: Makefile.include  event-internal.h  event.c
src/include/: Makefile.include  dsched_config_bottom.h  dsched_config_top.h  dsched_constants.h  dsched_globals.c  dsched_globals.h  dsched_hash_string.h  dsched_internal_version.h.in  dsched_portable_platform.h  dsched_prefetch.h  dsched_stdatomic.h  dsched_stdint.h  dsched_types.h
src/mca/ddl/: Makefile.am  configure.m4  ddl.h
src/mca/ddl/base/: Makefile.am  base.h  ddl_base_close.c  ddl_base_fns.c  ddl_base_open.c  ddl_base_select.c
src/mca/ddl/ddlopen/: Makefile.am  configure.m4  ddl_ddlopen.h  ddl_ddlopen_component.c  ddl_ddlopen_module.c
src/mca/ddl/dlibltdl/: Makefile.am  configure.m4  ddl_libltdl.h  ddl_libltdl_component.c  ddl_libltdl_module.c
src/mca/dinstalldirs/: Makefile.am  configure.m4  dinstalldirs.h
src/mca/dinstalldirs/base/: Makefile.am  base.h  dinstalldirs_base_components.c  dinstalldirs_base_expand.c
src/mca/dinstalldirs/config/: Makefile.am  configure.m4  dinstall_dirs.h.in  dsched_dinstalldirs_config.c
src/mca/dinstalldirs/env/: Makefile.am  configure.m4  dsched_dinstalldirs_env.c
src/mca/dlog/: Makefile.am  dlog.h
src/mca/dlog/base/: Makefile.include  base.h  log_base_frame.c  log_base_select.c
src/mca/dlog/stdfd/: Makefile.am  log_stdfd.c  log_stdfd.h  log_stdfd_component.c
src/mca/dmeta/: Makefile.am  dmeta.h
src/mca/dmeta/base/: Makefile.include  base.h  meta_base_frame.c  meta_base_select.c
src/mca/dmeta/pri/: Makefile.am  meta_pri.c  meta_pri.h  meta_pri_component.c
src/mca/dmetric/: Makefile.am  dmetric.h
src/mca/dmetric/base/: Makefile.include  base.h  metric_base_frame.c  metric_base_select.c
src/mca/dmetric/energy/: Makefile.am  metric_energy.c  metric_energy.h  metric_energy_component.c
src/mca/dsched/: Makefile.am  dsched.h
src/mca/dsched/base/: Makefile.am  base.h  sched_base_frame.c  sched_base_select.c
src/mca/dsched/fifo/: Makefile.am  sched_fifo.c  sched_fifo.h  sched_fifo_component.c
src/mca/sched/: Makefile.am  sched.h
src/mca/sched/base/: Makefile.am  base.h  help-sched-base.txt  sched_base_frame.c  sched_base_select.c
src/mca/sched/fifo/: Makefile.am  sched_fifo.c  sched_fifo.h  sched_fifo_component.c
src/runtime/: Makefile.include  dsched_mca_params.c  dsched_progress_threads.c  dsched_progress_threads.h  dsched_rte.c  dsched_rte.h  runtime.h
src/tools/: Makefile.include
src/tools/dsched/: Makefile.am  backend.c  dsched  dsched.c  dsched.h  help-dsched.txt  psched.h  queries.c  scheduler.c  server.c  session.c
src/tools/dsched_info/: Makefile.am  dsched-info  dsched_info.c  help-dsched_info.txt
src/util/: Makefile.am  dsched-convert-help.py  dsched_attr.c  dsched_attr.h  dsched_cmd_line.h  dsched_daemon_init.c  dsched_daemon_init.h  dsched_error.c  dsched_error.h  dsched_session_dir.c  dsched_session_dir.h
